Make repo ready for submission

--- a/lab4/code/EDA/eda.ipynb
+++ b/lab4/code/EDA/eda.ipynb
@@ -40,7 +40,7 @@
     "img_3_df = pd.DataFrame(img_3, columns=columns)\n",
     "all_imgs_df = pd.DataFrame(all_imgs, columns=columns)\n",
     "\n",
-    "# Replace labels with human-readable labels\n",
+    "# Replace labels with human-readable descriptions\n",
     "img_1_df[\"label\"] = img_1_df[\"label\"].replace({-1: \"No Cloud\", 1: \"Cloud\", 0: \"Unlabeled\"})\n",
     "img_2_df[\"label\"] = img_2_df[\"label\"].replace({-1: \"No Cloud\", 1: \"Cloud\", 0: \"Unlabeled\"})\n",
     "img_3_df[\"label\"] = img_3_df[\"label\"].replace({-1: \"No Cloud\", 1: \"Cloud\", 0: \"Unlabeled\"})\n",
@@ -49,12 +49,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-15T21:43:53.507977Z",
-     "start_time": "2024-11-15T21:43:53.239230Z"
+     "end_time": "2024-11-16T03:24:22.835709Z",
+     "start_time": "2024-11-16T03:24:22.456037Z"
     }
    },
    "id": "df48c1a74f365a39",
-   "execution_count": 1
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
