--- a/lab4/code/models/model_comparison.ipynb
+++ b/lab4/code/models/model_comparison.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-15T04:38:41.421051Z",
-     "start_time": "2024-11-15T04:38:41.291414Z"
+     "end_time": "2024-11-16T03:29:32.552164Z",
+     "start_time": "2024-11-16T03:29:32.459815Z"
     }
    },
    "outputs": [],
@@ -38,7 +38,7 @@
    "source": [
     "from sklearn.metrics import auc\n",
     "\n",
-    "# Compute AUC\n",
+    "# Compute AUC score\n",
     "auc_log_reg = auc(roc_data_log_reg[\"fpr\"], roc_data_log_reg[\"tpr\"])\n",
     "auc_rf = auc(roc_data_rf[\"fpr\"], roc_data_rf[\"tpr\"])\n",
     "auc_ensemble = auc(roc_data_ensemble[\"fpr\"], roc_data_ensemble[\"tpr\"])\n",
