--- a/lab4/report/lab4.tex
+++ b/lab4/report/lab4.tex
@@ -41,7 +41,7 @@
 \section{Introduction}
 Global climate change has been a huge concern over the past few decades. As the amount of carbon dioxide and greenhouse gases increase in the atmosphere, more heat is trapped, resulting in global warming. It is well known that carbon dioxide is responsible for about 70\% of global warming. Compared to the rest of the globe, the Arctic suffers much more from climate change. According to Rantanen et al., arctic warming is four times faster than the globe on average \parencite{rantanen2022arctic}. The cascading impacts of global warming threaten many facets of the Arctic, such as decreasing biodiversity (marine species) and accelerated shoreline erosions. More importantly, global warming causes ice to melt in the Arctic, speeding up the rise in temperature even more as water absorbs sunlight, and ice reflects it.
 
-As the Arctic continues to warm over the next few years, it is possible that the distribution of clouds in the arctic will change too. Clouds are important as they impact the energy flow in the Arctic climate system by modulating radiative and non-radiative energy, affecting surface/atmospheric temperature and arctic circulation \parencite{taylor2023isolating}. Thus, it is important for us to study the distribution of arctic clouds and their changes in response to climate change. However, the domain problem for this lab is that clouds are hard to study or detect because cloud particles with ice and water have similar properties to particles on ice- and snow- surfaces \parencite{shi2008daytime}. The goal of our lab is to build an algorithm for cloud detection that can distinguish a cloud from a non-cloud.
+As the Arctic continues to warm over the next few years, it is possible that the distribution of clouds in the Arctic will change too. Clouds are important as they impact the energy flow in the Arctic climate system by modulating radiative and non-radiative energy, affecting surface/atmospheric temperature and arctic circulation \parencite{taylor2023isolating}. Thus, it is important for us to study the distribution of arctic clouds and their changes in response to climate change. However, the domain problem for this lab is that clouds are hard to study or detect because cloud particles with ice and water have similar properties to particles on ice- and snow- surfaces \parencite{shi2008daytime}. The goal of our lab is to build an algorithm for cloud detection that can distinguish a cloud from a non-cloud.
 
 In this lab, we first performed some exploratory analysis on the three given images to see if there is any feature that is a good predictor for cloud detection. Then auto-encoder was used as a feature engineering tool to encode the data into a lower dimensional space and reconstruct the images. After splitting the data, we performed logistic regression, random forest, weighted ensemble, and neural network and determined the best classification model for cloud detection.
 
@@ -209,7 +209,7 @@ While the full model achieves a validation AUC score of 0.8267, the reduced mode
 \subsection{Random Forest}
 Following logistic regression, random forest models were developed to apply non-linear modeling algorithms to the cloud detection data. Analogous to the previous section, two different models were developed using scikit-learn: (1) a full model using the features NDAI, SD, CORR, and the radiance angles DF, CF, BF, AF, and AN, and (2) a reduced model consisting of only NDAI, SD, and CORR after feature selection as suggested in Sections \ref{sec:Data} and \ref{sec:feature_selection} \parencite[]{scikit-learn}.
 
-To tune the hyper-parameters of the random forests, two-fold cross-validation using image 1 and image was performed. Table \ref{table:random_forest_hp_space} shows the full hyper-parameter search space for both the full and the reduced model. Hyper-parameter tuning was conducted on the SCF Cluster, with a fixed random state to ensure reproducibility. The optimal set of hyper-parameters was identified through grid search, using the ROC AUC metric as the selection criterion. The best set of hyper-parameters is reported in Table \ref{table:best_hp_random_forest}. For the full model, they result in a validation AUC score of 0.9434, whereas the reduced model achieves a validation AUC score of 0.96.
+To tune the hyper-parameters of the random forests, two-fold cross-validation using image 1 and image 2 was performed. Table \ref{table:random_forest_hp_space} shows the full hyper-parameter search space for both the full and the reduced model. Hyper-parameter tuning was conducted on the SCF Cluster, with a fixed random state to ensure reproducibility. The optimal set of hyper-parameters was identified through grid search, using the ROC AUC metric as the selection criterion. The best set of hyper-parameters is reported in Table \ref{table:best_hp_random_forest}. For the full model, they result in a validation AUC score of 0.9434, whereas the reduced model achieves a validation AUC score of 0.96.
 
 \begin{table}[]
 \centering
@@ -361,14 +361,14 @@ This section focuses on determining the shortcomings of the best-performing mode
     \label{fig_classification_metrics}
 \end{figure}
 
-The precision is similar for both the "Cloud" and "No Cloud" classes. The recall for the "No Cloud" label, however, is notably higher by 22 percentage points. This indicates that the model has a bias towards classifying pixels as "No Cloud" rather than "Cloud". One possible reason for this bias could be the slight label imbalance observed in the dataset. As shown in Figure \ref{fig_eda_label_distrib} in Section \ref{sec:Data}, there is a difference of more than 12 percentage points between the number of data points labeled as "No Cloud" and "Cloud". The model's overall accuracy is 81\%, which means that the majority of the predictions are correct, but there are still notable areas for improvement.
+The precision is similar for both the ``Cloud'' and ``No Cloud'' classes. The recall for the ``No Cloud'' label, however, is notably higher by 22 percentage points. This indicates that the model has a bias towards classifying pixels as ``No Cloud'' rather than ``Cloud''. One possible reason for this bias could be the slight label imbalance observed in the dataset. As shown in Figure \ref{fig_eda_label_distrib} in Section \ref{sec:Data}, there is a difference of more than 12 percentage points between the number of data points labeled as ``No Cloud'' and ``Cloud''. The model's overall accuracy is 81\%, which means that the majority of the predictions are correct, but there are still notable areas for improvement.
 
-Figure \ref{fig_error_analysis} provides an understanding of the areas where the model makes mistakes. It can be observed that most errors occur in cloud regions that are misclassified as "No Cloud". This explains the lower recall values for the "Cloud" label. Furthermore, it can be concluded that the model is more confident in its predictions in areas where the ground truth label is "No Cloud".
+Figure \ref{fig_error_analysis} provides an understanding of the areas where the model makes mistakes. It can be observed that most errors occur in cloud regions that are misclassified as ``No Cloud''. This explains the lower recall values for the ``Cloud'' label. Furthermore, it can be concluded that the model is more confident in its predictions in areas where the ground truth label is ``No Cloud''.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{figs/error_analysis.pdf}
-    \caption{Pixel-wise predictions, accuracy, and confidence of the reduced weighted ensemble model on the test set (image 3). The model is defined to be confident if the predicted probability for the "Cloud" class is less than 0.4 or greater than 0.6.}
+    \caption{Pixel-wise predictions, accuracy, and confidence of the reduced weighted ensemble model on the test set (image 3). The model is defined to be confident if the predicted probability for the ``Cloud'' class is less than 0.4 or greater than 0.6.}
     \label{fig_error_analysis}
 \end{figure}
 
