--- a/lab4/code/models/ensemble/error_analysis.ipynb
+++ b/lab4/code/models/ensemble/error_analysis.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-15T05:30:46.864145Z",
-     "start_time": "2024-11-15T05:30:46.810690Z"
+     "end_time": "2024-11-16T03:27:49.463339Z",
+     "start_time": "2024-11-16T03:27:49.317Z"
     }
    },
    "outputs": [],
@@ -47,7 +47,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Calculate common classification metrics metrics\n",
+    "# Calculate common classification metrics\n",
     "precision_score_cloud = precision_score(predictions_labeled[\"label\"], predictions_labeled[\"pred\"], pos_label=1)\n",
     "recall_score_cloud = recall_score(predictions_labeled[\"label\"], predictions_labeled[\"pred\"], pos_label=1)\n",
     "f1_score_cloud = f1_score(predictions_labeled[\"label\"], predictions_labeled[\"pred\"], pos_label=1)\n",
