Adapt random forest notebook

--- a/lab4/code/models/randomforest/randomforest.ipynb
+++ b/lab4/code/models/randomforest/randomforest.ipynb
@@ -168,7 +168,7 @@
    ],
    "source": [
     "#load csv file\n",
-    "hyper_p_results = pd.read_csv(\"../../../results/grid_search_results_full_model.csv\") #this is the grid search result for choosing the hyperparameters\n",
+    "hyper_p_results = pd.read_csv(\"results/grid_search_results_full_model.csv\") #this is the grid search result for choosing the hyperparameters\n",
     "hyper_p_results=pd.DataFrame(hyper_p_results)\n",
     "columns_to_drop=list(hyper_p_results.columns[:4])+[hyper_p_results.columns[10]]+list(hyper_p_results.columns[14:18])+list(hyper_p_results.columns[19:21])\n",
     "hyper_p_results_dropped = hyper_p_results.drop(columns=columns_to_drop)\n",
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyper_p_results2 = pd.read_csv(\"../../../results/results_parameter.csv\") #this is the grid search result for choosing the hyperparameters"
+    "hyper_p_results2 = pd.read_csv(\"results/results_parameter.csv\") #this is the grid search result for choosing the hyperparameters"
    ]
   },
   {
@@ -568,7 +568,7 @@
    "source": [
     "# load the hyperparameter tuning results \n",
     "#load csv file\n",
-    "hyper_p_results2 = pd.read_csv(\"../../../results/grid_search_results_red_model.csv\") #this is the grid search result for choosing the hyperparameters\n",
+    "hyper_p_results2 = pd.read_csv(\"results/grid_search_results_red_model.csv\") #this is the grid search result for choosing the hyperparameters\n",
     "hyper_p_results2=pd.DataFrame(hyper_p_results2)\n",
     "columns_to_drop=list(hyper_p_results2.columns[:4])+[hyper_p_results2.columns[10]]+list(hyper_p_results2.columns[14:18])+list(hyper_p_results2.columns[19:21])\n",
     "hyper_p_results_dropped = hyper_p_results2.drop(columns=columns_to_drop)\n",
@@ -595,7 +595,7 @@
     }
    ],
    "source": [
-    "hyper_para_results = pd.read_csv(\"../../../results/results_parameter_red.csv\") #this is the grid search result for choosing the hyperparameters\n",
+    "hyper_para_results = pd.read_csv(\"results/results_parameter_red.csv\") #this is the grid search result for choosing the hyperparameters\n",
     "print(hyper_para_results)"
    ]
   },
